@@ -1,2 +1,10 @@
 # WorkingTimeCalculator
-WorkingTimeCalculator Project based on JavaFX with using Scene Builder.  Simple time calculator, which make your life easier for a little.
+WorkingTimeCalculator
+Project based on JavaFX with using Scene Builder.
+
+Simple time calculator, which make your life easier for a little.
+
+Before run this program install JavaFX (https://openjfx.io/openjfx-docs/) libraries and use this argument for JVM: 
+--module-path "YOUR_JAVAFX_PATH\lib" --add-modules=ALL-MODULE-PATH
+
+![alt tag](http://howItLooksLike.png "Program screenshot")​
